--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "data-hygiene"
+name = "data_hygiene"
 version = "0.0.1"
 description = "a data preprocessing toolkit that makes it easy to create common LLM-related data structures; from training data to chain payloads!"
 readme = "dynamic"
